# Blackhole-Simulator

./: CMakeLists.txt  LICENSE  README.md
python/: blackhole_colab_demo.ipynb  demo.py  gpu_demo.py  gpu_renderer.py
src/: bindings.cpp  raytrace.cpp  raytrace.hpp
